# brave-core

./: .gclient  .gitignore  DEPS  Jenkinsfile  package-lock.json  package.json
.storybook/: main.js
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: apk_for_test.flags
app/: brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  generated_resources.grd  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp
app/vector_icons/: BUILD.gn
browser/: about_flags.cc  brave_browser_main_parts.cc  brave_content_browser_client.cc  brave_features_internal_names.h  brave_prefs_browsertest.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/android/: brave_sync_worker.cc
browser/brave_adaptive_captcha/: brave_adaptive_captcha_service_factory.cc
browser/brave_federated/: brave_federated_service_factory.cc
browser/brave_shields/: ad_block_subscription_download_manager_getter.cc
browser/brave_stats/: brave_stats_updater.cc
browser/brave_vpn/: brave_vpn_service_factory.cc
browser/brave_wallet/: brave_wallet_service_unittest.cc  ethereum_provider_impl_unittest.cc  external_wallets_importer.cc  keyring_service_unittest.cc  send_transaction_browsertest.cc  solana_provider_renderer_browsertest.cc
browser/ephemeral_storage/: ephemeral_storage_1p_browsertest.cc
browser/farbling/: brave_screen_farbling_browsertest.cc
browser/infobars/: BUILD.gn  (+1 more)
browser/ntp_background_images/: BUILD.gn  ntp_background_pref.cc  ntp_background_pref.h  ntp_background_pref_unittest.cc  ntp_custom_background_images_service_delegate.cc  ntp_custom_background_images_service_delegate.h
browser/sync/: BUILD.gn  brave_sync_alerts_service.cc  brave_sync_client_unittest.cc
browser/ui/: BUILD.gn
components/brave_ads/core/browser/search_result_ad/: BUILD.gn  search_result_ad_info.cc  search_result_ad_info.h  search_result_ad_parsing.cc  search_result_ad_parsing.h  search_result_ad_parsing_unittest.cc
components/nested_star/: Cargo.toml  build.example.rs
components/nested_star/src/: lib.rs
patches/: PRESUBMIT.py.patch  base-BUILD.gn.patch  build-config-compiler-BUILD.gn.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-extensions-api-identity-identity_get_auth_token_function.cc.patch  chrome-browser-resources-tools-optimize_webui.gni.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-android-toolbar-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-browser-ui-views-location_bar-location_bar_view.cc.patch  chrome-browser-ui-views-toolbar-toolbar_view.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-renderer-chrome_content_renderer_client.cc.patch  chrome-test-BUILD.gn.patch  components-policy-tools-generate_policy_source.py.patch  components-sync-protocol-proto_visitors.h.patch  components-sync-protocol-sync.proto.patch  content-browser-renderer_host-navigation_controller_impl.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  content-common-user_agent.cc.patch  content-renderer-render_frame_impl.cc.patch  content-renderer-render_thread_impl.cc.patch  net-cookies-canonical_cookie.cc.patch  third_party-blink-public-devtools_protocol-browser_protocol.pdl.patch  tools-perf-core-results_dashboard.py.patch
renderer/: BUILD.gn  brave_content_renderer_client.cc  sources.gni
resources/: resource_ids.spec
script/: brave_license_helper.py
test/: BUILD.gn
(+518 files in other folders)
