source_set("sync") {
  sources = [
    "brave_sync_service_impl_delegate.cc",
    "brave_sync_service_impl_delegate.h",
  ]

  deps = [
    "//base",
    "//components/sync/driver",
    "//components/sync_device_info",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = []
  deps = []

  if (is_android || !is_android) {
    sources += [ "brave_sync_client_unittest.cc" ]
    deps += [
      "//chrome/browser",
      "//chrome/browser/profiles:profile",
      "//chrome/test:test_support",
      "//testing/gtest",
    ]
  }
}
