[package]
name = "nested-star-cxx"
version = "0.1.0"
edition = "2021"

[dependencies]
nested-sta-rs = { git = "https://github.com/brave-experiments/nested-sta-rs", rev = "ea1ba9cea5ac64c1150b3ad16706b3e2423f46d6" }
cxx = { path = "../../../third_party/rust/cxx/v1/crate" }
# Use following cxx dep if compiling example via Makefile
# cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[lib]
name = "nested_star_cxx"
crate-type = ["rlib"]
# Use following crate type setting if compiling example via Makefile
# crate-type = ["staticlib"]

# Also, if compiling example, rename build.example.rs to build.rs
