# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

source_set("search_result_ad") {
  sources = [
    "search_result_ad_info.cc",
    "search_result_ad_info.h",
    "search_result_ad_parsing.cc",
    "search_result_ad_parsing.h",
  ]

  deps = [
    "//base",
    "//services/network/public/cpp",
    "//third_party/abseil-cpp:absl",
  ]

  public_deps = [
    "//brave/vendor/bat-native-ads",
    "//third_party/blink/public/mojom:mojom_platform_headers",
  ]
}
